Bug 1672, fix linux launcher by making it into a script. Launcher script by Mike Taylor (bear@code-bear.com).
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3929 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -67,7 +67,7 @@ or biological weapons).</p>
 <br>
 &nbsp;
 <br>
-<li> <b>Source code distribution: </b> If you want to compile everything yourself, including the Python interpreter and all required libraries, this download contains the entire source tree. <b>A gzip'd tar file of this plugh is available </b><a href=Chandler_src_XYZZY.tar.gz>here</a> (if using Mac OSX, please unpack the file with gnutar instead of tar), and instructions for building Chandler are in the "osaf/hardhat/README.txt" within that tar file.  Also see our <a href=http://wiki.osafoundation.org/twiki/bin/view/Chandler/BuildingChandler>instructions for building Chandler</a> online.
+<li> <b>Source code distribution: </b> If you want to compile everything yourself, including the Python interpreter and all required libraries, this download contains the entire source tree. <b>A gzip'd tar file of this plugh is available </b><a href=Chandler_src_XYZZY.tar.gz>here</a> (if using Mac OSX, please unpack the file with gnutar instead of tar), and instructions for building Chandler are at <a href=http://wiki.osafoundation.org/twiki/bin/view/Chandler/BuildingChandler>instructions for building Chandler</a>.
 <br>
 &nbsp;
 <br>
@@ -102,7 +102,7 @@ This will create a Chandler_linux_XYZZY subdirectory.  Cd into that directory:
 
 Run Chandler:
 
-<pre>   ./release/RunChandler</pre>
+<pre>   ./chandler</pre>
 
 <br>
 <img src=http://www.osafoundation.org/images/spacer.gif width=1 height=1000> 
@@ -166,7 +166,7 @@ This will create a Chandler_linux_debug_XYZZY subdirectory.  Cd into that direct
 
 Run Chandler:
 
-<pre>   ./debug/RunChandler</pre>
+<pre>   ./chandlerDebug</pre>
 
 <br>
 <img src=http://www.osafoundation.org/images/spacer.gif width=1 height=1000> 
