--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 
-<h1>About Chandler</h1>  
+<h1>About Chandler</h1>
 
-<p>This is the 0.4 release of Chandler, the Personal Information Management software developed by the <a href="http://www.osafoundation.org">Open Source Applications Foundation</a>.</p>
+<p>This is the 0.5 release of Chandler, the Personal Information Management software developed by the <a href="http://www.osafoundation.org">Open Source Applications Foundation</a>.</p>
 
 <ul>
-<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/WhatIsZeroPointFour">What's New</a></li>
-<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ZeroPointFourPreferences">Setting Preferences</a></li>
-<li><a href="http://www.osafoundation.org/0.4/GuidedTour.htm">Guided Tour</a></li>
-<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ZeroPointFourKnownMajorBugs">Known Major Bugs</a></li>
+<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/WhatIsZeroPointFive">What's New</a></li>
+<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/WhatIsZeroPointFive#Setting_Preferences">Setting Preferences</a></li>
+<li><a href="http://www.osafoundation.org/0.5/GuidedTour.htm">Guided Tour</a> (PDF format)</li>
+<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ZeroPointFiveKnownMajorBugs">Known Major Bugs</a></li>
 <li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ReportingBugs">How to report a bug</a></li>
-<li><a href="http://osafoundation.org/Chandler_0.1-0.4_license_terms.htm">Licensing terms</a></li>
-<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ChandlerZeroPointFourReadme#How_to_get_involved">Getting involved</a></li>
-<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ChandlerZeroPointFourReadme#Further_information">Where to go for help</a></li>
+<li><a href="http://osafoundation.org/Chandler_0.1-0.5_license_terms.htm">Licensing terms</a></li>
+<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ChandlerZeroPointFiveReadme#How_to_get_involved">Getting involved</a></li>
+<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ChandlerZeroPointFiveReadme#Further_information">Where to go for help</a></li>
 <li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ChandlerContributors">Credits</a></li>
 </ul>
 
