Added /inbound to the servlet list
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4968 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/framework/webserver/servers/maindocs/index.html
+++ b/chandler/parcels/osaf/framework/webserver/servers/maindocs/index.html
@@ -6,6 +6,7 @@
 <body>
     <h3>Chandler Web Server</h3>
     <br>
+    &nbsp;&nbsp;&nbsp;<a href=/inbound/>RSS reader</a><br>    
     &nbsp;&nbsp;&nbsp;<a href=/repo/>Repository browser</a><br>
     &nbsp;&nbsp;&nbsp;<a href=/photos/>Photo viewer</a><br>
 </body>
